<?xml version="1.0"?>
<package format="2">
  <name>cartesian_controllers_ur_robots</name>
  <version>0.0.0</version>
  <description>An example setup for cartesian_controllers on Universal Robots</description>

  <maintainer email="scherzin@fzi.de">Stefan Scherzinger</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
