<?xml version="1.0"?>
<package format="2">
  <name>cartesian_controllers_ur_robots</name>
  <version>0.0.0</version>
  <description>An easy-to-start configuration for cartesian_controllers on Universal Robots</description>

  <maintainer email="scherzin@fzi.de">Stefan Scherzinger</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rviz</exec_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
